# my_rv32

./: .gitignore  Makefile  dune-project  my_rv32.opam
lib/: alu.ml  bp.ml  branch_cmp.ml  dmem.ml  dune  ex_mem.ml  fwd.ml  hdu.ml  id.ml  id_ex.ml  if_id.ml  imem.ml  mem_wb.ml  mux2.ml  pc.ml  rf.ml  se.ml  top.ml
reference/: A.v  ALU.v  PC.v  README.md  SE_16.v  data_mux.v  id.v  imem.txt  imm_mux.v  l7_RF.v  l7_TB.v  l7_dMEM.v  l7_iMEM.v  mux_2_to_1.v
test/: dune  program_alu.hex  program_beq.hex  program_blt.hex  program_fwd.hex  program_jump.hex  program_ls.hex  program_ls_off.hex  program_lui.hex  test_my_rv32.ml  top.v
